<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tugasmobile.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.tugasmobile.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_team_list"
        android:name="com.example.tugasmobile.ui.teamlist.TeamListFragment"
        android:label="@string/title_team_list"
        tools:layout="@layout/fragment_team_list" />

    <fragment
        android:id="@+id/navigation_match_list"
        android:name="com.example.tugasmobile.ui.matchlist.MatchListFragment"
        android:label="@string/title_match_list"
        tools:layout="@layout/fragment_match_list" />

</navigation>