<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UbahProfile">

    <TextView
        android:id="@+id/tv_nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nim"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/btn_ubah_data"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:hint="@string/label_nim"
        android:labelFor="@+id/tv_nim"
        android:id="@+id/et_nim"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/tv_nim"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nim"
        android:inputType="number"
        android:autofillHints=""
        />

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nama"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/btn_ubah_data"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_nim"
        />

    <EditText
        android:hint="@string/label_nama"
        android:labelFor="@+id/tv_nama"
        android:id="@+id/et_nama"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/tv_nama"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nama"
        android:inputType="text"
        android:autofillHints=""
        />

    <TextView
        android:id="@+id/tv_jurusan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nama"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/btn_ubah_data"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_nama"
        />

    <EditText
        android:hint="@string/label_jurusan"
        android:labelFor="@+id/et_jurusan"
        android:id="@+id/et_jurusan"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/tv_nama"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_jurusan"
        android:inputType="text"
        android:autofillHints=""
        />


    <Button
        android:id="@+id/btn_ubah_data"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/label_ubah"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_jurusan"
        app:layout_constraintVertical_bias="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>